# fourpisky-hub-intro-paper

./: CMakeLists.txt  Readme.md  bundle_for_arxiv.sh
manuscript/: fourpisky_hub_intro.bib  fourpisky_hub_intro.tex  voeventdb-remote-snippet.py
